[gd_scene load_steps=3 format=2]

[ext_resource path="res://puzzle_scene.gd" type="Script" id=1]
[ext_resource path="res://assets/figma6.png" type="Texture" id=2]

[node name="PuzzleScene" type="Node2D"]
script = ExtResource( 1 )

[node name="figma6" type="TextureRect" parent="."]
margin_right = 300.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="SubmitButton" type="Button" parent="."]
margin_left = 60.0
margin_top = 500.0
margin_right = 240.0
margin_bottom = 560.0
flat = true

[node name="BackButton" type="Button" parent="."]
margin_right = 50.0
margin_bottom = 50.0
flat = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="testAnswer" type="Label" parent="."]
visible = false
margin_left = 110.0
margin_top = 450.0
margin_right = 230.0
margin_bottom = 464.0
text = "car"
[connection signal="pressed" from="SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
